style(static): 调整手机预览样式
- 修改 phone-wrap 类的宽度和高度
- 调整 phone-content 类的缩放比例
- 添加 !important 标记以确保样式优先级

--- a/static/app/css/app.css
+++ b/static/app/css/app.css
@@ -1412,12 +1412,12 @@ fieldset[disabled] .radio-custom label {
 }
 
 .phone-wrap {
-    width: 375px;
-    height: 812px
+    width: 574px !important;
+    height: 1200px !important
 }
 
 .phone-content {
-    transform: scale(.33333333);
+    transform: scale(.37) !important;
     transform-origin: 0 0;
     border: 1px #f1f1f1 solid
 }
