style(css): 添加方正字体并调整字体家族
- 在 body 和 html 选择器中添加 'FangZheng' 字体
- 新增 @font-face 规则，引入方正字体文件
- 优化字体家族顺序，增加 sans

--- a/static/app/css/app.css
+++ b/static/app/css/app.css
@@ -2,7 +2,7 @@
 body,
 html {
     height: 100%;
-    font-family: 'SF Pro', 'PingFang SC'
+    font-family: 'FangZheng', 'SF Pro', 'PingFang SC', sans-serif
 }
 
 a:active,
@@ -51,6 +51,13 @@ a:hover {
     font-style: normal;
     font-weight: 400;
     src: url(../fonts/SansStdBold.ttf)
+}
+
+@font-face {
+    font-family: 'FangZheng';
+    font-style: normal;
+    font-weight: 400;
+    src: url(../fonts/fangzheng.TTF) format("truetype")
 }
 
 .wrapper {
