style: 调整微信对话框文本背景色
- 将微信对话框右侧文本的背景颜色从 #98e970 修改为 #95ED69
- 此颜色调整使得界面更加美观，提高了用户体验

--- a/static/app/css/app.css
+++ b/static/app/css/app.css
@@ -1801,7 +1801,7 @@ fieldset[disabled] .radio-custom label {
 }
 
 .wechat-dialog-right .wechat-dialog-text {
-    background: #98e970;
+    background: #95ED69;
     margin-left: 140px;
     margin-right: 160px
 }
